refactor(somle-esb): 优化代码结构和性能
- 移除了 EsbController 中的 syncPurchaseOrder 方法
- 优化了 KingdeeService 中的采购订单保存和审核逻辑
- 在 SyncUtils 中使用 toList() 替代 Collectors.toList() 以提高性能